--- a/DemoApp/Base.lproj/Main_iPhone.storyboard
+++ b/DemoApp/Base.lproj/Main_iPhone.storyboard
@@ -89,7 +89,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="modal" id="Fcp-gb-0g8"/>
+                                    <segue destination="gzf-5E-mOS" kind="unwind" unwindAction="returned:" id="p8n-7r-eBP"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -97,6 +97,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fd4-ut-iVl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="gzf-5E-mOS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="584" y="49"/>
         </scene>
